<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/reject_Button"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        android:onClick="rejectStatus"
        android:backgroundTint="@color/gold"
        android:text="@string/reject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accept_button" />

    <Button
        android:id="@+id/accept_button"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        android:onClick="acceptStatus"
        android:text="@string/accept"
        android:backgroundTint="@color/gold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_button" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        android:onClick="updateToDatabase"
        android:text="@string/update"
        android:backgroundTint="@color/gold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_button" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        android:onClick="deleteFromDatabase"
        android:text="@string/delete"
        android:backgroundTint="@color/gold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_button" />

    <EditText
        android:id="@+id/Class_no"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/class_no"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameSurname" />

    <EditText
        android:id="@+id/nameSurname"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Class_no" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        android:onClick="saveToDatabase"
        android:text="@string/save"
        android:backgroundTint="@color/gold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail" />

    <EditText
        android:id="@+id/sector"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/sector"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <GridView
        android:id="@+id/gv_list"
        android:layout_width="411dp"
        android:layout_height="331dp"
        android:layout_marginTop="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reject_Button" />

</androidx.constraintlayout.widget.ConstraintLayout>